2012-02-18 - 2.1.0

 - Repository migrated from SVN on ermarian.net to GitHub.
 - Changed the rendering algorithm to render tags even inside nocode, and then
   discard the result when the nocode tag is closed successfully. This replaces
   the old behavior of blocking all rendering, and then retroactively do it
   if the nocode tag breaks. This code was vulnerable to input that used quadratic time.
 - Stopped injecting tag content and arguments into evaluated PHP code. Instead,
   the code must access the $tag variable to get these arguments.
 - xbbcode currently has branches compatible with 7.x and 8.x.

2010-10-26 - 2.0.4-r495

 - Ported xbbcode_table and xbbcode_list.
 - Compatibility upgrade for Drupal 7: As of issue #934050, text formats use an 
   alphanumeric key instead of an integer. Global constant switched from 0 to
   GLOBAL, to avoid colliding with lowercase text format IDs.
 - Allowed using the format-level settings form for unsaved formats. The new UI
   for Drupal expects settings to work even before an actual format ID exists.
 - The long filter tips have been converted to a table to match the HTML help.
 - More generic and better samples in the xbbcode_basic module.
 - Many other small codestyle fixes and bug fixes.

2010-04-16 - 2.0.0-r462

 - Completely rewrote the parsing algorithm for BBCode. Tags are now required to be nested correctly.
   Tag weights are gone, and so is the "pairing" process.

2010-04-12 - 1.1.0-r453

 - Several significant bugs and regressions were fixed.
 - Restored compatibility with the new development version of Drupal 7 core.
 - The tag discovery process was streamlined and greatly improved.
 - Minor improvements were made to the administrative interface and help texts.

2009-12-10 - 1.0.0-r393

 - XBBCode is now compatible with Drupal 7.
 - Greatly improved the administration interface.
 - Refactored and cleaned up the code.

2008-12-26 - 1.1.1-r326

 - Fixed a bug that broke [quote] tags.